--- a/index.html
+++ b/index.html
@@ -1,26 +1,36 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- TODO: Set the document title to the name of your application -->
-    <title>Lovable App</title>
-    <meta name="description" content="Lovable Generated Project" />
-    <meta name="author" content="Lovable" />
 
-    <!-- TODO: Update og:title to match your application name -->
-    <meta property="og:title" content="Lovable App" />
-    <meta property="og:description" content="Lovable Generated Project" />
-    <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <!-- TODO: Set the document title to the name of your application -->
+  <title>Vitola App</title>
+  <meta name="description" content="Vitola - The Sommelier Guided Cigar Experience" />
+  <meta name="author" content="Vitola Master" />
 
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@Lovable" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
-  </head>
+  <!-- Favicon -->
+  <link rel="icon" type="image/png" href="/vitola-logo.png" />
 
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
-  </body>
+  <!-- Open Graph -->
+  <meta property="og:title" content="Vitola App" />
+  <meta property="og:description" content="Vitola - The Sommelier Guided Cigar Experience" />
+  <meta property="og:type" content="website" />
+  <meta property="og:image" content="/vitola-logo.png" />
+
+  <!-- Twitter -->
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="Vitola App" />
+  <meta name="twitter:description" content="Vitola - The Sommelier Guided Cigar Experience" />
+  <meta name="twitter:image" content="/vitola-logo.png" />
+</head>
+
+<body>
+  <div class="diagnostic-banner">
+    SYSTEM DIAGNOSTIC: INDEX.HTML RENDERED
+  </div>
+  <div id="root"></div>
+  <script type="module" src="/src/main.tsx"></script>
+</body>
+
 </html>
